app/assets/style.css
body {
    font-family: "Frutiger", "Lucinda Grande", "Lucinda Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
    padding: 15px;
    background-color: #009374;
}

#app_title {
    color: #009374;
    font-weight: 500;
    text-align: center;
    font-size: 20pt;
    text-shadow: 2px 2px 3px #A0A0A0;
    letter-spacing: 4px;
}

.github_link {
  width: 60px;
  height: 60px;
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  z-index: 1000;
}

h2 {
    font-weight: normal;
    text-align: center;
    /*padding: 5px 10px 0px 10px;*/
    /*margin: 0px 0px;*/
}

.container {
    margin: 2px;
    padding: 15px 15px 15px 35px;
    display: inline-block;
    justify-content: center;
    width: 300px;
    position: relative;
    background-color: #FFFFFF;
    /*border: 1px #009374;*/
    /*border-radius: 0px 0px 10px 0px;*/
    /*box-shadow: 2px 2px 0px 0px #F0F0F0;*/
    filter: drop-shadow(0px 0px 2px #F0F0F0);
}

.longContainer {
    width: 700px;
}

.extraLongContainer {
    width: 1000px;
}

.container h2{
    color: #A0A0A0;
    position: absolute;
    left: 0;
    bottom: 0;
    transform-origin: 0 0;
    transform: rotate(270deg);
    background: none;
    margin: 0px 10px -15px 5px;
}

.container h3{
    font-size: 12pt;
    margin: 10px 5px 2px 5px;
}

.container p{
    font-size: 11pt;
    margin: 10px 10px 2px 5px;
}

.columnContainer {
    display: flex;
    flex-direction: column;
    margin: 0px 10px;
    vertical-align: top;
}

.rowContainer {
    display: flex;
    flex-direction: row;
    margin: 0 50px;
    vertical-align: top;
}

.overallContainer {
    width: 100%;
}

.logo {
    transform: scale(0.2, 0.2);
    position: fixed;
    top: -100px;
    right: -480px;
    filter: drop-shadow(5px 5px 2px #F0F0F0);
}

.footer {
    color: #A0A0A0;
    margin-left: 0;
    margin-right: 0;
}

.footer a:link, a:visited, a:active {
     color: #A0A0A0;
     text-decoration: none;
}

.footer a:hover   {
    color: #009374;
    text-decoration: underline;
}

.Select-control {
    margin-left: 10px;
    width: 93%;
}

.cAPXWV {
    color: black !important;
}

.Select--multi .Select-value {
    color: #009374;
    border-color: #009374;
    background-color: #FEFEFE;
}

.sample_slider {
    margin: 0 20px;
}

.rc-slider {
    margin-top: 5px;
}

.rc-slider-track {
  background-color: #009374;
}

.rc-slider-dot-active {
  border: solid 2px #009374;
}

.rc-slider-handle {
  border-color: #009374;
}

.rc.slider-handle:hover {
  border-color: #009374;
}

.rc.slider-handle-active:active {
  border-color: #009374;
}

.rc-slider-tooltip-inner {
    background-color: rgba(255, 255, 255, .95);
    box-shadow: none;
    color: #009374;
}

/* General button style */
    .button {
            display: flex;
            align-items: center;
            justify-content: center;
            width: 50px;
            height: 50px;
            border-radius: 50%;
            border: none;
            cursor: pointer;
            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
            transition: background-color 0.3s ease, box-shadow 0.3s ease;
        }

        .button:hover {
            background-color: #005a45;
            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
        }

        /* Play button */
        .play {
            background-color: #009374;
            width: 70px;
            height: 70px;
        }

        .play::before {
            content: "\23F5";
            font-size: 56px;
            color: #FFFFFF;
            margin-left: 2px;
            margin-bottom: 8px;
        }

                /* Pause button */
        .pause {
            background-color: #009374;
            width: 70px;
            height: 70px;
        }

        .pause::before {
            content: "\23F8";
            font-size: 42px;
            color: #FFFFFF;
            margin-left: 2px;
            margin-bottom: 8px;
        }

        /* Next button */
        .next {
            background-color: white;
            border: 2px solid #009374;
            font-size: 26px;
            color: #009374;
        }

        .next::before {
            content: "\23EF"; /* Next symbol */
            margin-bottom: 5px;
        }

        /* Repeat button */
        .repeat {
            background-color: white;
            border: 2px solid #009374;
            font-size: 26px;
            color: #009374;
        }

        .repeat::before {
            content: "\2B6F"; /* Repeat symbol */
        }

        /* Centering the buttons */
        .button-container {
            display: flex;
            align-items: center;
            justify-content: center;
            gap: 15px;
            margin-top: 30px;
            margin-bottom: 20px;
        }

/* Icons */

.icon-reset:before {
  content: "\2B6F";
}

.icon-play:before {
  content: "\23F5";
}

.icon-pause:before {
  content: "\23F8";
}

.icon-step:before {
  content: "\23EF";
}

